src/test/ui/borrowck/borrowck-move-out-of-tuple-struct-with-dtor.nll.stderr
error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:17:11
   |
LL |     match S("foo".to_string()) {
   |           ^^^^^^^^^^^^^^^^^^^^ cannot move out of here
LL |         S(_s) => {}
   |           --
   |           |
   |           data moved here
   |           help: to prevent move, use ref or ref mut: `ref _s`

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:24:17
   |
LL |     let S(_s) = S("foo".to_string());
   |           --    ^^^^^^^^^^^^^^^^^^^^ cannot move out of here
   |           |
   |           data moved here
   |           help: to prevent move, use ref or ref mut: `ref _s`

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:28:19
   |
LL | fn move_in_fn_arg(S(_s): S) {
   |                   ^^--^
   |                   | |
   |                   | data moved here
   |                   | help: to prevent move, use ref or ref mut: `ref _s`
   |                   cannot move out of here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0509`.
